# TPV2Garmin

./: .gitignore  README.md  RELEASE_NOTES_v1.3.1-mac.md  pyproject.toml  requirements.txt
docs/plans/: 2026-02-25-tpv2garmin-design.md
src/tpv2garmin/: __init__.py  app.py  auth.py  config.py  fixer.py  notifications.py  pipeline.py  process_monitor.py  settings.py  tray.py  watcher.py  wizard.py
src/tpv2garmin/assets/: icon.icns
